[tool.poetry]
name = "Edbook-template"
version = "0.1.0"
description = ""
authors = ["Einar Ari Arnason"]
packages = [
    { include = "extensions" },
#    { include = "projects" },
]


[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.3.2"
seedir = "^0.1.2"
pypandoc = "^1.5"
Sphinx= "^4.0.3"
sphinx-rtd-theme = "^0.5.2"
sphinxcontrib-katex = "^0.8.6"
paramiko= "^2.7.2"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.790"
pylint = "^2.6.0"
black = "^20.8b1"
rstcheck = "^3.3.1"
sphinx-autobuild = "^2020.9.1"
commitizen = "^2.13.0"

[tool.poetry.scripts]
hicli = "hicli.main:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
